ecmascript/parser/tests/test262-error-references/fail/a9431906f263368d.js.stderr
error: TS1005
 --> $DIR/tests/test262-parser/fail/a9431906f263368d.js:1:5
  |
1 | ({a = 0})
  |     ^

